[package]
name = "dropcolumns"
version = "0.0.0"
authors = ["Ryan Wick <rrwick@gmail.com>"]
edition = "2018"
description = "a tool for dropping columns in a FASTA-format whole-genome pseudo-alignment"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
flate2 = "1.0"
seq_io = "0.3.1"
tempfile = "3"
